// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'should transform @breakpoints 1' 1`] = `
"import { Style as _Style } from 'styling-engine/Style';
import { breakpoints as _breakpoints } from 'styling-engine/config';
const res = (
  <_Style href="x68wlg" precedence="mui-components">
    {'.mui-button{color:red}' +
      Object.keys(_breakpoints).reduce((acc, key) => {
        const value = _breakpoints[key];
        const ks = key + '\\\\';
        return (
          acc +
          \`@media \${value}{ .mui-button.\${ks}\\:size-1{padding:var(--size-1)}.mui-button.\${ks}\\:size-2{padding:var(--size-2)} }\`
        );
      }, '.mui-button.size-1{padding:var(--size-1)}.mui-button.size-2{padding:var(--size-2)}') +
      ''}
  </_Style>
);
"
`;

exports[`'should transform @breakpoints 2' 1`] = `
"import { Style as _Style } from 'styling-engine/Style';
import { breakpoints as _breakpoints } from 'styling-engine/config';
const res = (
  <_Style href="1vaz5xc" precedence="mui-components">
    {'.mui-button{color:red}' +
      Object.keys(_breakpoints).reduce((acc, key) => {
        const value = _breakpoints[key];
        const ks = key + '\\\\';
        return (
          acc +
          \`@media \${value}{ .mui-Button.\${ks}\\:size-1{padding:var(--size-1)}.mui-Button.\${ks}\\:size-2{padding:var(--size-2)} }\`
        );
      }, '.mui-Button.size-1{padding:var(--size-1)}.mui-Button.size-2{padding:var(--size-2)}') +
      ''}
  </_Style>
);
"
`;

exports[`'should transform custom media query 1' 1`] = `
"import { Style as _Style } from 'styling-engine/Style';
import { breakpoints as _breakpoints } from 'styling-engine/config';
const res = (
  <_Style href="zorwtt" precedence="mui-components">
    {\`.mui-button{color:red}@media \${_breakpoints['xs']}{.mui-button{color:#00f}}\` +
      Object.keys(_breakpoints).reduce((acc, key) => {
        const value = _breakpoints[key];
        const ks = key + '\\\\';
        return (
          acc +
          \`@media \${value}{ .mui-Button.\${ks}\\:size-1{padding:var(--size-1)}.mui-Button.\${ks}\\:size-2{padding:var(--size-2)} }\`
        );
      }, '.mui-Button.size-1{padding:var(--size-1)}.mui-Button.size-2{padding:var(--size-2)}') +
      ''}
  </_Style>
);
"
`;

exports[`'should transform custom media query a…' 1`] = `
"import { Style as _Style } from 'styling-engine/Style';
import { breakpoints as _breakpoints } from 'styling-engine/config';
const res = (
  <_Style
    href="153s0vy"
    precedence="mui-components"
  >{\`@media \${_breakpoints['xs']}{.mui-Button{color:#00f}}\`}</_Style>
);
"
`;

exports[`'should transform multiple @breakpoints' 1`] = `
"import { Style as _Style } from 'styling-engine/Style';
import { breakpoints as _breakpoints } from 'styling-engine/config';
const res = (
  <_Style href="ttnix3" precedence="mui-components">
    {'.mui-button{color:red}' +
      Object.keys(_breakpoints).reduce((acc, key) => {
        const value = _breakpoints[key];
        const ks = key + '\\\\';
        return (
          acc +
          \`@media \${value}{ .mui-button.\${ks}\\:size-1{padding:var(--size-1)}.mui-button.\${ks}\\:size-2{padding:var(--size-2)} }\`
        );
      }, '.mui-button.size-1{padding:var(--size-1)}.mui-button.size-2{padding:var(--size-2)}') +
      '.mui-button:disabled{color:gray}' +
      Object.keys(_breakpoints).reduce((acc, key) => {
        const value = _breakpoints[key];
        const ks = key + '\\\\';
        return (
          acc + \`@media \${value}{ .mui-button.\${ks}\\:variant-1{color:green} }\`
        );
      }, '.mui-button.variant-1{color:green}') +
      '.mui-button:active{color:#08c}'}
  </_Style>
);
"
`;
